Make hidden grid sorting caret transparent to prevent flicker

--- a/src/Pim/Bundle/UIBundle/Resources/public/css/pim.less
+++ b/src/Pim/Bundle/UIBundle/Resources/public/css/pim.less
@@ -30,7 +30,7 @@ a:focus {
 table.grid {
   margin-bottom: 20px;
   thead th span.caret {
-    display: none;
+    border-color: transparent;
   }
 }
 .grid-container {
